2005-08-02  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (Column, List): Add support for cell editing.

2005-08-01  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (Column): subclass GObject implicitly.

	* kiwi/utils.py (PropertyObject): update to use ClassInittableObject
	refactor a little bit and add extra checks so we don't accidentally
	try to register a GObject type for it.
	Move out so it's not a subclass of GObject, but require it to
	be a subclass of GObject, this will make it possible to use
	the class for GObject subclasses

	* kiwi/python.py: New file, add ClassInittableObject.

2005-07-29  Johan Dahlin  <jdahlin@async.com.br>

	* bin/kiwi-i18n:
	* kiwi/i18n/__init__.py:
	* kiwi/i18n/i18n.py:
	* kiwi/i18n/msgfmt.py:
	* kiwi/i18n/pygettext.py:
	Add kiwi-i18n and copy in msgfmt/pygettext from the python 
	distribution, modify msgfmt slightly to be usable from outside
	of the script. 	
	
2005-07-28  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/proxies.py:
	* kiwi/ui/views.py:
	* kiwi/ui/widgets/proxy.py:
	It turned out that the last patch was not flexible enough.
	Slaves and proxies had to be attached in the correct order, and
	sometimes the validation state of the widgets were not emitted.

	This patch changes the following two things:
	1) Always emit validation state for all widgets when attaching
	a proxy to a view
	2) Always emit validation state for slaves attached to views 
	
2005-07-27  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (Column.__init__): Mark title_pixmap as 
	todo, since it's not implemented yet. Sort the other properties after
	the doc string. Add tooltips doc string.
	(List._cell_data_func): Clean up a little bit and add support for 
	format func
	(Column): Add format_func attribute, documentation and 
	basic error handling
	(Column.from_string): Make it a classmethod, not a staticmethod

2005-07-26  Johan Dahlin  <jdahlin@async.com.br>

	* examples/lang.glade: