@@ -4,8 +4,11 @@ import datetime
 
 import gtk
 
+from kiwi.environ import require_gazpacho
+require_gazpacho()
 from kiwi.datatypes import ValidationError
 from kiwi.ui.delegates import Delegate
+
 
 class Person:
     pass
@@ -20,9 +23,12 @@ class Form(Delegate):
                                    'sex', 'nationality', 'ok_btn'],
                           delete_handler=self.quit_if_last)
     
-        self.nationality.prefill([('Brazilian', 1),
-                                  ('Yankee', 2),
-                                  ('Other', 3)])
+        self.nationality.prefill(['Brazilian',
+                                  'Yankee',
+                                  'Other'])
+        #self.nationality.prefill([('Brazilian', 1),
+        #                          ('Yankee', 2),
+        #                          ('Other', 3)])
         self.sex.prefill(('Male', 'Female'))
         self.register_validate_function(self.validity)
         self.height.set_data_format('%4.4f')
@@ -48,19 +54,23 @@ class Form(Delegate):
                                              "some weight!")
     
     def on_nationality__validate(self, widget, data):
-        if data != 2:
+        if data != 'Yankee':
             return ValidationError("Go home terrorist!")
     
     def validity(self, valid):
         self.ok_btn.set_sensitive(valid)
 
+    def on_about__validate(self, widget, data):
+        if not 'kinda' in data.lower():
+            return ValidationError("use a better language")
+        
 person = Person()
 person.name = 'John Doe'
 person.age = 36
 person.birthdate = datetime.datetime(year=1969, month=2, day=20)
 person.height = 183.0
 person.weight = 86.0
-person.nationality = 2
+person.nationality = 'Yankee'
 person.about = 'Kinda fat'
 
 form = Form()
@@ -79,7 +89,6 @@ def on_ok_btn_clicked(widget):
     print "About Your self:", person.about
     
     gtk.main_quit()
-
 
 form.ok_btn.connect("clicked", on_ok_btn_clicked)
 gtk.main()
